--- a/Lexico/Base.lproj/Main.storyboard
+++ b/Lexico/Base.lproj/Main.storyboard
@@ -102,7 +102,7 @@
                                                 <rect key="frame" x="8" y="12" width="26" height="26"/>
                                                 <state key="normal" image="Speak"/>
                                             </button>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7Jb-ap-7Aa" userLabel="Origianl Text">
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="table" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7Jb-ap-7Aa" userLabel="Origianl Text">
                                                 <rect key="frame" x="8" y="46" width="584" height="159"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
