--- a/Lexico/Base.lproj/Main.storyboard
+++ b/Lexico/Base.lproj/Main.storyboard
@@ -101,6 +101,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OdU-ti-92z" userLabel="Speak">
                                                 <rect key="frame" x="8" y="12" width="26" height="26"/>
                                                 <state key="normal" image="Speak"/>
+                                                <connections>
+                                                    <action selector="speakFromLanguageTouchUpInside:" destination="vsF-nT-5Ii" eventType="touchUpInside" id="Kko-RG-8Y9"/>
+                                                </connections>
                                             </button>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="table" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7Jb-ap-7Aa" userLabel="Origianl Text">
                                                 <rect key="frame" x="8" y="46" width="584" height="159"/>
@@ -151,6 +154,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gbB-AO-SfI" userLabel="Speak">
                                         <rect key="frame" x="8" y="276" width="26" height="26"/>
                                         <state key="normal" image="Speak"/>
+                                        <connections>
+                                            <action selector="speakToLanguageTouchUpInside:" destination="vsF-nT-5Ii" eventType="touchUpInside" id="wyg-1s-6xX"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🇪🇸" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hip-gc-O5l" userLabel="Flag Label">
                                         <rect key="frame" x="566" y="270" width="26" height="32"/>
