--- a/Lexico/Base.lproj/Main.storyboard
+++ b/Lexico/Base.lproj/Main.storyboard
@@ -326,6 +326,67 @@
             </objects>
             <point key="canvasLocation" x="1316" y="-345"/>
         </scene>
+        <!--History Scene-->
+        <scene sceneID="s3W-PN-sXZ">
+            <objects>
+                <tableViewController title="History Scene" id="EOJ-dx-BO2" customClass="HistoryViewController" customModule="Lexico" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="amC-r8-gK6">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="historyViewCell" textLabel="ptg-eI-AdG" detailTextLabel="nsT-c0-VHy" style="IBUITableViewCellStyleValue1" id="Inu-gF-VR8">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Inu-gF-VR8" id="UcV-Wj-1qU">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ptg-eI-AdG">
+                                            <rect key="frame" x="15" y="12" width="32" height="20"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nsT-c0-VHy">
+                                            <rect key="frame" x="543" y="12" width="42" height="20"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="EOJ-dx-BO2" id="lqb-J3-BUf"/>
+                            <outlet property="delegate" destination="EOJ-dx-BO2" id="AkM-hF-Jmo"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="NKX-q9-fdF">
+                        <barButtonItem key="leftBarButtonItem" title="Edit" id="efU-b4-mXH">
+                            <connections>
+                                <action selector="activateEditMode:" destination="EOJ-dx-BO2" id="DF3-Cl-Itt"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Clear All" id="Cc2-TI-Pk9">
+                            <connections>
+                                <action selector="deleteAll:" destination="EOJ-dx-BO2" id="5Uc-Lu-qKb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="deleteAllButton" destination="Cc2-TI-Pk9" id="lYP-rT-Yf0"/>
+                        <outlet property="editDoneButton" destination="efU-b4-mXH" id="hhd-n2-9QB"/>
+                        <outlet property="historyTable" destination="amC-r8-gK6" id="B7l-Tg-CM2"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7bm-ds-Wgl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1384" y="1403"/>
+        </scene>
         <!--Pick Language Scene-->
         <scene sceneID="ULi-yl-Ma7">
             <objects>
@@ -413,10 +474,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <connections>
+                        <segue destination="EOJ-dx-BO2" kind="relationship" relationship="rootViewController" id="jSC-YK-BYW"/>
+                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e3Y-6G-lFh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="466" y="1339"/>
+            <point key="canvasLocation" x="466" y="1433"/>
         </scene>
     </scenes>
     <resources>
