--- a/Lexico/Base.lproj/Main.storyboard
+++ b/Lexico/Base.lproj/Main.storyboard
@@ -445,7 +445,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hTf-6T-lFQ">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="Select your desired Language" id="HCt-8q-drq">
                                         <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="8l8-Fd-ppC">
@@ -457,7 +457,7 @@
                                 </items>
                             </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1Xt-AZ-RMh">
-                                <rect key="frame" x="0.0" y="44" width="600" height="556"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="languageCell" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="languageCell" id="miW-dC-q6r">
@@ -475,10 +475,10 @@
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="1Xt-AZ-RMh" secondAttribute="trailing" constant="-20" id="0Fd-U8-7A3"/>
                             <constraint firstItem="hTf-6T-lFQ" firstAttribute="leading" secondItem="1Xt-AZ-RMh" secondAttribute="leading" id="7me-GQ-fc2"/>
-                            <constraint firstItem="hTf-6T-lFQ" firstAttribute="top" secondItem="Nn7-bp-fjX" secondAttribute="topMargin" id="9zz-U3-ZYK"/>
                             <constraint firstItem="1Xt-AZ-RMh" firstAttribute="top" secondItem="hTf-6T-lFQ" secondAttribute="bottom" id="Jqu-iC-Doh"/>
                             <constraint firstItem="ohE-1j-MfD" firstAttribute="top" secondItem="1Xt-AZ-RMh" secondAttribute="bottom" id="LHr-Rw-XSE"/>
                             <constraint firstItem="1Xt-AZ-RMh" firstAttribute="leading" secondItem="Nn7-bp-fjX" secondAttribute="leadingMargin" constant="-20" id="PnT-Pl-gbU"/>
+                            <constraint firstItem="hTf-6T-lFQ" firstAttribute="top" secondItem="Ohx-IX-MEs" secondAttribute="bottom" id="b2f-XZ-nrv"/>
                             <constraint firstItem="1Xt-AZ-RMh" firstAttribute="top" secondItem="Ohx-IX-MEs" secondAttribute="bottom" constant="8" id="bMv-M6-3XR"/>
                             <constraint firstItem="hTf-6T-lFQ" firstAttribute="trailing" secondItem="1Xt-AZ-RMh" secondAttribute="trailing" id="tE5-m6-aXD"/>
                         </constraints>
